# memorix-sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  memorix.yaml  memorix_hierarchical_config.yaml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  COMPLETED_TASKS_SUMMARY.md  CONTRIBUTING.md  INSTALL.md  PURPOSE_ALIGNMENT_REPORT.md  ProblemStatement.md  PurposeStatement.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  USAGE.md  VISION.md
examples/: basic_usage.py  hierarchical_memory_demo.py  privacy_compliant_agent.py
src/memorix/: __init__.py  config.py  embedder.py  memory_api.py  memory_hierarchy.py  metadata_store.py  recall.py  tracing.py  vector_store.py
src/memorix/audit/: __init__.py  log.py
src/memorix/memory/: __init__.py  update.py
src/memorix/memory/storage/: __init__.py  base.py
src/memorix/privacy/: __init__.py  consent.py  erase.py
tests/: test_memory_api.py
